infrastructure/vpc.tf
resource "aws_vpc" "EKSvpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "EKSvpc"
  }
}
